--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mocha" : "latest",
     "amdefine" : "latest",
     "requirejs" : "latest",
-    "should" : "latest"
+    "should" : "latest",
+    "assert" : "latest"
   }
 }
