Decided on mocha with chai as test framework. Updated grunt scripts and tests

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "mocha" : "latest",
     "requirejs" : "latest",
-    "assert" : "latest"
+    "chai" : "latest",
+    "grunt" : "latest",
+    "grunt-mocha" : "latest"
   }
 }
