--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "engines": {
     "node": "~0.6.7"
   },
-  "dependencies": {},
+  "dependencies": {
+    "backbone" : "latest"
+  },
   "devDependencies": {
     "mocha" : "latest",
     "requirejs" : "latest",
