--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "~0.6.7"
   },
   "dependencies": {
+    "underscore" : "latest",
     "backbone" : "latest"
   },
   "devDependencies": {
