removed grunt-contrib from package
npm install was complaining on the mac about this package

--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "requirejs" : "latest",
     "chai" : "latest",
     "grunt" : "latest",
-    "grunt-mocha" : "latest",
-    "grunt-contrib" : "latest"
+    "grunt-mocha" : "latest"
   }
 }
